[package]
name = "eoka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
indicatif = { version = "0.17.3"}
reqwest = {version = "0.11.16", features = ["stream"]}
tokio = {version = "1.27.0", features = ["full"]}
futures-util = {version = "0.3.27"}
lazy_static = {version = "1.4.0"}
human_bytes = {version = "0.4.1"}
blake3 = {version = "1.3.3", features = ["rayon"]}
colored = {version = "2.0.0"}
os_pipe = {version = "1.1.4"}
chrono = {version = "0.4.24"}